fix day in the game section

--- a/src/partials/game.html
+++ b/src/partials/game.html
@@ -29,6 +29,7 @@
             srcset="./img/game/coins_m.png 1x, ./img/game/coins.png 2x"
             src="./img/game/coins_m.png"
             alt="coins"
+            class="bonus-img-1"
           />
           <h3 class="game_li_h3">Morning Rewards</h3>
           <p class="game_li_p">Collect your daily bonus and power-ups</p>
@@ -39,6 +40,7 @@
             srcset="./img/game/star_m.png 1x, ./img/game/star.png 2x"
             src="./img/game/star_m.png"
             alt="star"
+            class="bonus-img-2"
           />
           <h3 class="game_li_h3">Daily Challenges</h3>
           <p class="game_li_p">Complete special missions for extra rewards</p>
@@ -49,6 +51,7 @@
             srcset="./img/game/berry_m.png 1x, ./img/game/berry.png 2x"
             src="./img/game/berry_m.png"
             alt="berry"
+            class="bonus-img-3"
           />
           <h3 class="game_li_h3">Night Mode Gaming</h3>
           <p class="game_li_p">Special night-time rewards</p>
