--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,7 +18,7 @@
           />
 
           <!-- Фолбек для старих браузерів -->
-          <img src="./img/header/logo-desktop@2.png" alt="Logo" />
+          <img src="./img/header/logo-desktop@2x.png" alt="Logo" />
         </picture>
         <span>Juicy Crush</span>
       </a>
