fix line break in 'Game Overview' section header

--- a/src/partials/overview.html
+++ b/src/partials/overview.html
@@ -2,8 +2,8 @@
   <div class="container overview-container">
     <h2 class="over_h2">Game Overview</h2>
     <h3 class="over_h3">
-      Welcome to <span class="over-text-accent">Juicy Crush</span>, the most
-      refreshing match-3 puzzle game!
+      Welcome to <span class="over-text-accent">Juicy Crush</span>,<br />
+      the most refreshing match-3 puzzle game!
     </h3>
     <p class="over_p">
       Dive into a world filled with vibrant fruits, exciting combos, and
