fix margin of items on desktop

--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -197,6 +197,11 @@
     width: 382px;
     padding-top: 22px;
   }
+
+  .game_li:not(:last-child) {
+    margin-bottom: 87px;
+  }
+
   .game_gallery {
     width: 382px;
   }
