fix section 'The Art of Sound'

--- a/src/scss/sound.scss
+++ b/src/scss/sound.scss
@@ -1,5 +1,7 @@
 .sounds {
-  background-color: #e0bbec;
+  background-color: $_light_bg_color;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 // vk
@@ -13,16 +15,16 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  gap: 16px;
-  padding-top: 22px;
-  padding-bottom: 22px;
+  padding: 22px 10px;
 }
+
 .sound_h2 {
   font-weight: 700;
   font-size: 24px;
   line-height: 2.08333;
   text-align: center;
   color: #fff;
+  margin-bottom: 8px;
 }
 
 .sound_p {
@@ -31,42 +33,7 @@
   line-height: 1.5625;
   text-align: center;
   color: #fff;
-}
-
-.sound_cta {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-  border: 0px solid #e5e7eb;
-  border-radius: 12px;
-  width: 260px;
-  height: 56px;
-
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-}
-
-@media (min-width: 1200px) {
-  .sound {
-    border-radius: 12px;
-    width: 1008px;
-    height: 300px;
-    gap: 24px;
-  }
-  .sound_h2 {
-    font-size: 36px;
-    color: #fffefe;
-  }
-  .sound_p {
-    font-size: 20px;
-    line-height: 1.25;
-    color: #fffefe;
-  }
-  .sound_cta {
-    margin-top: 8px;
-  }
+  margin-bottom: 16px;
 }
 
 .sound-cta {
@@ -75,20 +42,52 @@
   justify-content: center;
   border: 0px solid #e5e7eb;
   border-radius: 12px;
-  width: 272px;
+  width: 260px;
   height: 56px;
   background: #fffefe;
 }
+
 .sound-cta-p {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
+  @include poppins(500);
+  @include font(16, 23);
   text-align: center;
   background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 .sound-cta:hover {
   background: #efefef;
+}
+
+@media (min-width: 1200px) {
+  .sound {
+    border-radius: 12px;
+    width: 1008px;
+    height: 300px;
+    padding: 46px 86px;
+  }
+
+  .sound_h2 {
+    @include font(36, 54);
+    color: #fffefe;
+    margin-bottom: 24px;
+  }
+
+  .sound_p {
+    font-size: 20px;
+    line-height: 1.25;
+    color: #fffefe;
+    margin-bottom: 24px;
+  }
+
+  .sounds {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .sound-cta {
+    width: 210px;
+  }
 }
