fix section 'Easter Eggs & Hidden Secrets'

--- a/src/scss/secrets.scss
+++ b/src/scss/secrets.scss
@@ -13,14 +13,12 @@
   font-size: 24px;
   line-height: 146%;
   text-align: center;
-  color: var(--linel-1);
+  color: #000;
 }
 
 .secret_p {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 187%;
+  @include poppins(400);
+  @include font(16, 30);
   text-align: center;
   color: #4b5563;
   padding-top: 8px;
@@ -51,18 +49,22 @@
   );
 }
 
+.secret-home-cta {
+  height: 56px;
+}
+
 @media (min-width: 1200px) {
   .secret {
     padding-top: 80px;
     padding-bottom: 80px;
   }
+
   .secret_h {
-    font-family: var(--font-family);
-    font-weight: 700;
-    font-size: 36px;
+    @include poppins(700);
+    @include font(36, 54);
     text-align: center;
-    color: var(--linel-1);
   }
+
   .secret_p {
     font-family: var(--font-family);
     font-weight: 400;
