--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -17,14 +17,28 @@
     </div>
     <nav>
       <ul id="mobile-menu-links" class="mobile-menu-list">
-        <li><a href="#overview">Game Overview</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#play">How to Play</a></li>
-        <li><a href="#game">Day in the Game</a></li>
-        <li><a href="#sounds">The Art of Sound</a></li>
-        <li><a href="#developers">Developer’s Insights</a></li>
-        <li><a href="#speedrun">Speedrun Challenges</a></li>
-        <li><a href="#secrets">Easter Eggs & Hidden Secrets</a></li>
+        <li><a href="#overview" data-text="Game Overview">Game Overview</a></li>
+        <li><a href="#features" data-text="Features">Features</a></li>
+        <li><a href="#play" data-text="How to Play">How to Play</a></li>
+        <li><a href="#game" data-text="Day in the Game">Day in the Game</a></li>
+        <li>
+          <a href="#sounds" data-text="The Art of Sound">The Art of Sound</a>
+        </li>
+        <li>
+          <a href="#developers" data-text="Developer’s Insights"
+            >Developer’s Insights</a
+          >
+        </li>
+        <li>
+          <a href="#speedrun" data-text="Speedrun Challenges"
+            >Speedrun Challenges</a
+          >
+        </li>
+        <li>
+          <a href="#secrets" data-text="Easter Eggs & Hidden Secrets"
+            >Easter Eggs & Hidden Secrets</a
+          >
+        </li>
       </ul>
     </nav>
   </div>
