--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -79,6 +79,43 @@ section {
     flex-wrap: wrap;
     row-gap: 9px;
     column-gap: 12px;
+
+    a {
+      transition-property: color;
+      transition-duration: 400ms;
+      transition-timing-function: ease;
+      transition-delay: 0;
+      position: relative;
+
+      &::after {
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        @include gradient-text();
+        background-position: left;
+        opacity: 0;
+        transition-property: opacity;
+        transition-duration: 400ms;
+        transition-timing-function: ease;
+        transition-delay: 0;
+        pointer-events: none;
+      }
+
+      &.active,
+      &:active,
+      &:hover {
+        color: transparent;
+      }
+
+      &:hover::after,
+      &.active::after,
+      &:active::after {
+        opacity: 1;
+      }
+    }
   }
 
   .header-logo {
