--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -43,6 +43,43 @@
   li {
     @include poppins(400);
     @include font(16, 24);
+
+    a {
+      transition-property: color;
+      transition-duration: 400ms;
+      transition-timing-function: ease;
+      transition-delay: 0;
+      position: relative;
+
+      &::after {
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        @include gradient-text();
+        background-position: left;
+        opacity: 0;
+        transition-property: opacity;
+        transition-duration: 400ms;
+        transition-timing-function: ease;
+        transition-delay: 0;
+        pointer-events: none;
+      }
+
+      &.active,
+      &:active,
+      &:hover {
+        color: transparent;
+      }
+
+      &:hover::after,
+      &.active::after,
+      &:active::after {
+        opacity: 1;
+      }
+    }
   }
 }
 
