--- a/src/scss/play.scss
+++ b/src/scss/play.scss
@@ -36,6 +36,8 @@
         @include font(30, 43);
         justify-self: center;
         margin-bottom: 16px;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       h3 {
