add transition effects

--- a/src/partials/cookies-p.html
+++ b/src/partials/cookies-p.html
@@ -1,6 +1,6 @@
 <div class="cookies-policy">
   <div class="container">
-    <a class="cookies-policy-button" href="./">Go to Home</a>
+    <a class="cookies-policy-button" href="./"><span>Go to Home</span></a>
     <div class="cookies-policy-block">
       <h1>Cookies Policy</h1>
       <p>
