--- a/src/partials/privacy-p.html
+++ b/src/partials/privacy-p.html
@@ -1,6 +1,6 @@
 <div class="page_p_p">
   <div class="container">
-    <a class="pp-back-link" href="./index.html">Go to Home</a>
+    <a class="pp-back-link" href="./index.html"><span>Go to Home</span></a>
     <div class="pp_box">
       <div>
         <h1>Privacy Policy</h1>
