--- a/src/scss/cookies-p.scss
+++ b/src/scss/cookies-p.scss
@@ -12,10 +12,7 @@
     display: block;
     padding: 10px 24px;
 
-    &:active,
-    &:hover {
-      background-image: $_gradient_button_clicked;
-    }
+    @include gradientTransition($_gradient_button_clicked);
   }
 
   .cookies-policy-block {
