--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,9 +52,9 @@
         </ul>
       </nav>
       <button class="header-menu-button" id="menu-button" title="menu button">
-        <svg class="icon" width="48" height="48">
+        <!-- <svg class="icon" width="48" height="48">
           <use href="./img/sprite.svg#icon-burger"></use>
-        </svg>
+        </svg> -->
       </button>
     </div>
   </div>
