--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -10,9 +10,9 @@
         />
       </a>
       <button id="menu-close" title="close menu" class="menu-close-button">
-        <svg class="icon" width="48" height="48">
+        <!-- <svg class="icon" width="48" height="48">
           <use href="./img/sprite.svg#icon-icon-x"></use>
-        </svg>
+        </svg> -->
       </button>
     </div>
     <nav>
